@@ -2,6 +2,7 @@ package com.p3.fkult.presentation.controllers;
 
 import com.p3.fkult.business.services.ExampleMessageService;
 import com.p3.fkult.business.services.ThemeService;
+import com.p3.fkult.business.services.UserService;
 import com.p3.fkult.persistence.entities.ExampleMessage;
 import com.p3.fkult.persistence.entities.Theme;
 import org.springframework.http.ResponseEntity;
@@ -14,9 +15,11 @@ import java.util.List;
 public class ThemeController {
 
     private final ThemeService themeService;
+    private final UserService userService;
 
-    public ThemeController(ThemeService themeService) {
+    public ThemeController(ThemeService themeService, UserService userService) {
         this.themeService = themeService;
+        this.userService = userService;
     }
 
     @GetMapping
@@ -25,14 +28,24 @@ public class ThemeController {
     }
 
     @PostMapping
-    public ResponseEntity<String> createTheme(@RequestBody ThemeRequest themeRequest) {
-        if (    themeRequest.getName() == null ||
-                themeRequest.getName().isBlank() ||
-                themeRequest.gettConsts() == null ||
-                themeRequest.gettConsts().isEmpty())
+    public ResponseEntity<String> createTheme(@RequestBody ThemeRequest themeRequest){
+        String name = themeRequest.getName();
+        String username = themeRequest.getUsername();
+        List<String> tConsts = themeRequest.gettConsts();
+        List<String> drinkingRules = themeRequest.getDrinkingRules();
+        if (name == null || name.trim().isBlank() || tConsts.isEmpty() ||username == null || username.trim().isEmpty())
         {
-            return ResponseEntity.badRequest().body("Theme data not accepted please ensure there is a title and at least one tConst" + themeRequest.toString());
+            return ResponseEntity.badRequest().body("Theme data not accepted please ensure there is a title, username and at least one movie");
         }
+        if (userService.getIfUserBanned(username)){
+            ResponseEntity.badRequest().body("Theme data not accepted as user is banned");
+        }
+        /*
+        //check if user even exists and fail them if they do not exist
+        if (){
+            ResponseEntity.badRequest().body("Theme data not accepted as user doesn't exist");
+        }
+        */
         themeService.createThemeWithTConsts(themeRequest);
         return ResponseEntity.ok("Theme created successfully");
     }
